Include receipt items in receipts-by-user
